<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlack"
    tools:context=".dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:contentDescription="@string/image_decs"
            android:src="@drawable/dashboard_vector_admin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/data_siswa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="@color/colorGrey">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/button_siswa"
                        android:layout_width="wrap_content"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/siswa_icon_admin"
                        android:contentDescription="@string/image_decs" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/button_siswa"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/siswa"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/data_kelas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="@color/colorGrey">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/button_kelas"
                        android:layout_width="wrap_content"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/kelas_icon_admin"
                        android:contentDescription="@string/image_decs" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/button_kelas"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/kelas"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/data_pelanggaran"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="@color/colorGrey">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:layout_marginTop="16dp"
                        android:id="@+id/button_pelanggaran"
                        android:layout_width="wrap_content"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/icon_list_pelanggaran_admin"
                        android:contentDescription="@string/image_decs" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/button_pelanggaran"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/pelanggaran"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/data_penghargaan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="@color/colorGrey">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:layout_marginTop="16dp"
                        android:id="@+id/button_penghargaan"
                        android:layout_width="wrap_content"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/icon_list_penghargaan_admin"
                        android:contentDescription="@string/image_decs" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/button_penghargaan"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/penghargaan"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/data_guru"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="@color/colorGrey">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:layout_marginTop="16dp"
                        android:id="@+id/button_guru"
                        android:layout_width="wrap_content"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/guru_icon_admin"
                        android:contentDescription="@string/image_decs" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/button_guru"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/guru"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>